# dota2

./: .travis.yml  dota2.cabal
src/WebAPI/: Dota.hs
src/WebAPI/Dota/Internal/: SharedFields.hs
src/WebAPI/Dota/Types/: Ability.hs  Hero.hs  Item.hs  League.hs  Match.hs  Player.hs  Result.hs  Scoreboard.hs  Team.hs
