name:                dota2
version:             0.1.0.0
synopsis:            Library for interfacing with Valve's WebAPI for Dota 2
-- description:
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
copyright:           © 2015 Fraser Murray
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    WebAPI.Dota
    WebAPI.Dota.Types.Ability
    WebAPI.Dota.Types.Hero
    WebAPI.Dota.Types.Item
    WebAPI.Dota.Types.League
    WebAPI.Dota.Types.Match
    WebAPI.Dota.Types.Player
    WebAPI.Dota.Types.Scoreboard
    WebAPI.Dota.Types.Team
  other-modules:
    WebAPI.Dota.Internal.SharedFields
    WebAPI.Dota.Types.Result
  build-depends:
    base >= 4.6 && < 4.9,
    api-builder >= 0.7.3.0,
    aeson,
    containers,
    lens,
    shared-fields,
    text,
    transformers
  hs-source-dirs:      src/
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    TemplateHaskell
  ghc-options: -Wall
